--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 GOOGLE_ID = 1033559981128-00q8l4ebq4aa66t16ok3d62iueq0lg8b.apps.googleusercontent.com
 
 GOOGLE_CLIENT_SECRET = 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
+
+MONGODB_URI = mongodb+srv://tersoo:<g7fv98la6J3KP3sv>@cluster0.u5juf6k.mongodb.net/?retryWrites=true&w=majority
