Set up authentication

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ GOOGLE_ID = 1033559981128-00q8l4ebq4aa66t16ok3d62iueq0lg8b.apps.googleuserconten
 GOOGLE_CLIENT_SECRET = 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
 
 MONGODB_URI = mongodb+srv://tersoo:<g7fv98la6J3KP3sv>@cluster0.u5juf6k.mongodb.net/?retryWrites=true&w=majority
+
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL_INTERNAL = http://localhost:3000
+NEXTAUTH_SECRET = oKkGd4fnoRTrKhlpwmfaCypHWSE5Gxx8ZkmYfmNqLl8=
+
